projects/vb6parse/snapshots/syntax/statements/file_operations/line_input/line_input_at_module_level.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/line_input.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LineInputStatement
      children:
        - kind: LineKeyword
          text: Line
        - kind: Whitespace
          text: " "
        - kind: InputKeyword
          text: Input
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: IntegerLiteral
          text: "1"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: myLine
        - kind: Newline
          text: "\n"
