projects/vb6parse/snapshots/syntax/statements/file_operations/line_input/line_input_in_loop.snap
---
source: projects/vb6parse/src/syntax/statements/file_operations/line_input.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: DoStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DoKeyword
                  text: Do
                - kind: Whitespace
                  text: " "
                - kind: WhileKeyword
                  text: While
                - kind: Whitespace
                  text: " "
                - kind: UnaryExpression
                  children:
                    - kind: NotKeyword
                      text: Not
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: EOF
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "1"
                        - kind: RightParenthesis
                          text: )
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: LineInputStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: LineKeyword
                          text: Line
                        - kind: Whitespace
                          text: " "
                        - kind: InputKeyword
                          text: Input
                        - kind: Whitespace
                          text: " "
                        - kind: Octothorpe
                          text: "#"
                        - kind: IntegerLiteral
                          text: "1"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Identifier
                          text: textLine
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: LoopKeyword
                  text: Loop
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
